# embodied-ai

./: .gitignore  README.md  docker-compose.yml  pnpm-lock.yaml
backend/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/config/: app.yaml
backend/embodiedai_mvp/: __init__.py
backend/embodiedai_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/embodiedai_mvp/brain/: __init__.py  brain_client.py
backend/embodiedai_mvp/mcp_server/: __init__.py  server.py
backend/embodiedai_mvp/mvp_nodes/: __init__.py  grasp_action_server.py  sim_node.py  vision_node.py
backend/embodiedai_mvp/utils/: __init__.py  config.py  rerun_utils.py
backend/launch/: sim.launch.py
backend/tests/: test_brain_client.py
backend/urdf/mjcf/: embodiedai_hand.xml
frontend/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: rerun-viewer.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
frontend/src/lib/: utils.ts
frontend/src/stores/: use-robot-control.ts
frontend/src/styles/: globals.css
